--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -5,21 +5,13 @@
 {{#if posts}}
     {{#each posts}} <!--loop-->
     <div class = "well">
-    <p>{{content}}</p>
+        <p>{{content}} <a href="/posts/{{id}}">read more...</a></p>
     </div><!--show-->
     {{/each}}
 {{else}} <!--noposts-->
     <p>No posts!</p>
 {{/if}}
 
-<p>Add a new Post:</p>
-
-<form action="/posts/new" method="POST">
-    <label for="content">Post Description</label>
-    <input id="content" name="content" type="text">
-
-    <button type="submit" class="btn btn-default">Add post</button>
-</form>
 {{/partial}}
 
 {{> layout.hbs}}
