include the remainder functionality for the blog project

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -35,6 +35,11 @@
 
     <!--end main template-->
 {{#block "footer"}}
+<footer class="footer">
+       <div class="container">
+           <p class="text-muted"><a href="/posts/delete">DELETE ALL POSTS</a></p>
+       </div>
+   </footer>
             <p>Photos by Sarah Crutchfield and Brenda Godinez on Unsplash</p>
     </div>
 
